--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "my-electron-app",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "Hello World!",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron-forge start",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "make": "electron-forge make",
+    "publish": "electron-forge publish"
   },
   "keywords": [],
   "author": "chensui",
@@ -18,6 +19,7 @@
     "@electron-forge/maker-rpm": "^6.0.5",
     "@electron-forge/maker-squirrel": "^6.0.5",
     "@electron-forge/maker-zip": "^6.0.5",
+    "@electron-forge/publisher-github": "^6.0.5",
     "electron": "^23.1.2"
   },
   "dependencies": {
